# azure-ddns

./: LICENSE  README.md  example-config.json  pyproject.toml
azure_ddns/: README.md  pyproject.toml
azure_ddns/azure_ddns/: cli.py  example-config.json  setup.cfg
azure_ddns/tests/: test_azure_ddns.py
src/azure-ddns/: __init__.py  __main__.py
