[tool.poetry]
name = "azure-ddns"
version = "0.0.1"
description = ""
authors = ["tle06 <tle@tlnk.fr>"]

[tool.poetry.dependencies]
python = ">=3.8"
azure-identity = "^1.10.0"
azure-mgmt-dns = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
